testing secondary color change reflex

--- a/assets/scss/_theme.scss
+++ b/assets/scss/_theme.scss
@@ -4,9 +4,9 @@ $themeRoot: (
     'main-text': #021523,
     'text-light': #818ea0,
     'primary': #041e42,
-    'secondary': #ffbd27,
+    'secondary': #ffb606,
     'link': #0070dc,
-    'form-border': #d9dde3,
+    'form-border': #e3ded9,
     'form-placeholder': #9aa5b3,
     'theme-danger': #ef262c,
     'theme-warning': #ff5c00,
