--- a/assets/scss/_theme.scss
+++ b/assets/scss/_theme.scss
@@ -3,9 +3,9 @@ $themeRoot: (
     'background': #fff,
     'main-text': #021523,
     'text-light': #818ea0,
-    'primary': #041e42,
-    'secondary': #ffb606,
-    'link': #0070dc,
+    'primary': #082359,
+    'secondary': #00d2bb,
+    'link': #368dd9,
     'form-border': #e3ded9,
     'form-placeholder': #9aa5b3,
     'theme-danger': #ef262c,
@@ -15,8 +15,8 @@ $themeRoot: (
     'theme-success': #00a046,
     'theme-light': #f2f3f5,
     'product-fade-border': #e0e5ea,
-    'shop-button': #00a046,
-    'shop-button-active': #037535
+    'shop-button': #082359,
+    'shop-button-active': #00d2bb
   ),
   font: (
     'primary': ('aktiv-grotesk', sans-serif),
