--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Machic
-Theme URI: http://themeforest.net/user/klbtheme/portfolio
+Theme Name: Solmedic Theme
+Theme URI: https://github.com/johnkegd/solmedic-theme
 Author: KlbTheme (Sinan ISIK)
 Author URI: http://themeforest.net/user/KlbTheme
 Domain Path: /languages
-Description: This WordPress theme is best for use in such business areas as electronic store, tools store and responsive ecommerce.
+Description: This WordPress theme is best for use in such business areas as medical equipment, tools store and responsive ecommerce.
 Version: 1.0.8
 Requires at least: 5.0
 Requires PHP: 7.2
@@ -12,13 +12,18 @@ Tested up to: 5.8
 License: GNU General Public License version 3.0
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Tags: right-sidebar, left-sidebar,  one-column, two-columns, three-columns, four-columns, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-image-header, featured-images, full-width-template, microformats, post-formats, sticky-post, theme-options, threaded-comments, translation-ready
-Text Domain: machic
+Text Domain: solmedic-theme
 
-Theme Developer:
+Theme Developers:
 http://themeforest.net/user/KlbTheme
 http://facebook.com/13Sinan13
 https://twitter.com/SinanIk
 Skype:berbat1231
+
+http://themeforest.net/user/johnkegd
+http://facebook.com/johnkegd
+https://twitter.com/johnkegd_
+Instagram:@johnkegd
 */
 
 /*- - - - - Contents - - - - -
